# custom-CNN

./: .gitignore  README.md  SequentialModel.ipynb  pyproject.toml  requirements.txt
src/custom_cnn/: __init__.py  cli.py  data.py  evaluation.py  model.py  training.py
src/custom_cnn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
