[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-cnn"
version = "0.1.0"
description = "Custom CNN on CIFAR-10 using Keras (from a notebook to a Python package)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Your Name" }]
dependencies = [
  "tensorflow>=2.10",
  "numpy",
  "scikit-learn",
  "matplotlib",
  "opencv-python",
]

[project.scripts]
custom-cnn = "custom_cnn.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

